Updated index.html file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Heaven Food — Pure Veg Indian Cuisine</title>
   <meta name="description" content="Heaven Food — 100% Pure Veg Indian Restaurant serving authentic flavors, fresh ingredients, and warm hospitality." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" /
-  >
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -75,17 +74,12 @@
         <p class="muted">Crispy rice dosa stuffed with spiced potato filling.</p>
         <div class="price">₹120</div>
       </article>
-<article class="card">
-        <h4>Pizza</h4>
-        <p class="muted">diffrent kind of Pizza's available.</p>
-        <div class="price">₹120</div>
-      </article>
 
       <article class="card">
-  <h4>Pulao</h4>
-  <p class="muted">Aromatic basmati rice cooked with fresh vegetables and mild Indian spices.</p>
-  <div class="price">₹200</div>
-</article>
+        <h4>Veg Biryani</h4>
+        <p class="muted">Aromatic basmati rice cooked with vegetables and saffron.</p>
+        <div class="price">₹200</div>
+      </article>
 
       <article class="card">
         <h4>Dal Tadka</h4>
@@ -127,8 +121,8 @@
     <div class="gallery">
       <img src="360_F_582286506_Kji3X5NrZBHMTFSqwG9gADXWMsjrtEjL.jpg" alt="Paneer Dish">
       <img src="traditional-indian-thali-presenting-various-dishes-round-tray-metal-food-like-rice-naan-bread-paneer-sauces-composing-365700812.webp" alt="Thali">
-      <img src="" alt="South Indian Food">
-      <img src="" alt="Dessert">
+      <img src="https://images.unsplash.com/photo-1555992336-03a23c3ce0ae?q=80&w=800&auto=format&fit=crop" alt="South Indian Food">
+      <img src="https://images.unsplash.com/photo-1543353071-087092ec393e?q=80&w=800&auto=format&fit=crop" alt="Dessert">
     </div>
   </section>
 
@@ -178,7 +172,7 @@
     <h3>Contact & Location</h3>
     <div class="grid-2">
       <div>
-        <p><strong>Address:</strong> 12 Veg Street, Titli Park, Raisen</p>
+        <p><strong>Address:</strong> 12 Veg Street, Green Park, YourCity</p>
         <p><strong>Phone:</strong> +91 98765 43210</p>
         <p><strong>Email:</strong> hello@heavenfood.in</p>
         <p><strong>Hours:</strong> Daily 11:00 AM – 10:30 PM</p>
@@ -195,5 +189,7 @@
       <p>&copy; <span id="year"></span> Heaven Food • Pure Veg • All rights reserved</p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
